# artifice-engine

./: BACKEND_SWITCHING_EXAMPLES.md  Cargo.toml  README_NEW_FEATURES.md  REORGANIZATION.md  WINDOW_BACKEND_SWITCHING_SUMMARY.md  X11_BACKEND.md  X11_BACKEND_SWITCHING_SOLUTION.md  X11_IMPLEMENTATION_SUMMARY.md  dod_demo  run_backend_demos.sh  test_wayland_fix.sh  test_x11_switch.sh
examples/: advanced_backend_demo.rs  backend_switching_demo.rs  basic_demo.rs  black_screen_debug.rs  comprehensive_demo.rs  debug_x11_context.rs  dod_performance_demo.rs  event_system_demo.rs  simple_backend_switch.rs  test_x11_switching.rs  visual_x11_test.rs  wayland_test.rs  x11_test.rs
plans/: planning.md
src/: event.rs  io.rs  lib.rs  main.rs  mod.rs
src/events/: core.rs  mod.rs
src/input/: gamepad.rs  keyboard.rs  manager.rs  mod.rs  mouse.rs  recording.rs
src/io/: artificeglfw.rs  gamepad.rs  keyboard.rs  metrics.rs  mouse.rs
src/logging/: Cargo.toml  README.md
src/logging/examples/: README.md  advanced_usage.rs  basic_usage.rs  console_only_demo.rs  env_demo.rs  file_only_demo.rs  final_demo.rs  logging_demo.rs  simple_demo.rs  working_example.rs
src/logging/src/: batching.rs  benchmarks.rs  config.rs  lib.rs  writers.rs
src/logging/tests/: logging_test.rs
src/window/: artificeglfw.rs  backend_hotswap.rs  factory.rs  mod.rs  wayland.rs  x11.rs
