[package]
name = "artifice-engine"
version = "0.0.0"
edition = "2021"
authors = ["Detrivos"]
description = "The core libraries for the artifice-engine"

[lib]
name = "artifice_engine"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"

glfw = "0.59.0"
gl = "0.14.0"
glam = "0.30.3"

# Optional Wayland support
wayland-client = { version = "0.31", features = ["log"], optional = true }
libc = { version = "0.2", optional = true }

# Optional X11 support
x11 = { version = "2.21", features = ["xlib", "glx"], optional = true }

[dependencies.artifice-logging]
path = "src/logging"
version = "0.1.0"

[features]
default = []
wayland = ["wayland-client", "libc"]
x11 = ["dep:x11"]

[workspace]
members = ["src/logging"]
